fix issues by sonarqube